--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Privacy Policy - Shoopt</h1>
-    <p><strong>Version:</strong> Beta 0.0.20 – July 2025</p>
+    <p><strong>Version:</strong> Beta 0.0.22 – July 2025</p>
 
     <h2>1. Introduction</h2>
-    <p>Shoopt is a mobile app that helps users optimize their grocery shopping by taking product photos and detecting store locations using GPS.</p>
+    <p>Shoopt is a mobile app that helps users optimize their shopping by scanning product images and saving price data. We use AI for product recognition and Google Maps API to identify the store location.</p>
 
     <h2>2. Collected Data</h2>
     <ul>
